syntax = "proto2";
package onedb;

option java_package = "tk.onedb.rpc";
option java_outer_classname = "OneDBCommon";

message FieldProto {
  required string name = 1;
  required int32 type = 2;
}

message HeaderProto {
  repeated FieldProto field = 1;
}

message RowsProto {
  repeated bytes row = 1;
}

message DataSetProto {
  required HeaderProto header = 1;
  required RowsProto rows = 2;
}

message FieldValue {
  oneof field {
    string str = 1;
    bool b = 2;
    int32 i32 = 3;
    int64 i64 = 4;
    float f32 = 5;
    double f64 = 6;
  }
}

message LiteralProto {
  required int32 type = 1;
  required FieldValue value = 2;
}

message IRFieldProto {
  oneof field {
    LiteralProto literal = 1;
    int32 ref = 2;
  }
}

message OperatorProto {
  required int32 opType = 1;
  required int32 outType = 2;
  repeated IRFieldProto in = 3;
  optional int32 func = 4;
}

message ExpressionProto {
  repeated OperatorProto op = 1;
}