syntax = "proto2";
import "common.proto";
package onedb;

option java_package = "tk.onedb";
option java_outer_classname = "OneDBService";


message GeneralRequest {
  required string value = 1;
}

message GeneralResponse {
  optional int32 status = 1 [default = 0];
  optional string msg = 2 [default = "ok"];
}

service Service {
  rpc AddClient(GeneralRequest) returns (GeneralResponse);
  rpc GetTableHeader(GeneralRequest) returns (HeaderProto);
  rpc OneDBQuery(OneDBQueryProto) returns (stream DataSetProto);
}